# virtual-pet-2

./: .gitignore  CMakeLists.txt  flake.nix
include/: errorbox.hpp  file-io.hpp  file-object.hpp  primitive-shapes.hpp  sdl-attributes.hpp  sdl-window.hpp
include/engine/: event-handler.hpp  file-object.hpp  image.hpp  primitive-shapes.hpp  sdl-attributes.hpp  sdl-gl-context.hpp  sdl-window.hpp  user-input.hpp
include/engine/opengl/: gl-texture.hpp  gl-types.hpp  render-target.hpp  render.hpp  shader-program.hpp  shader.hpp  vao.hpp  vbo.hpp
include/gameplay/: init-game.hpp  pet.hpp  statistic.hpp  tick-manager.hpp
src/: file-io.cpp  main.cpp  sdl-window.cpp
src/engine/: event-handler.cpp  file-object.cpp  image.cpp  sdl-attributes.cpp  sdl-gl-context.cpp  sdl-window.cpp  user-input.cpp
src/engine/opengl/: gl-texture.cpp  render.cpp  shader-program.cpp  vao.cpp
src/gameplay/: init-game.cpp  pet.cpp  statistic.cpp  tick-manager.cpp
src/shaders/: default.frag  default.vert
